--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <input type="email" name="email"  placeholder="Email address or phone number">
                     <input type="password" name="password" placeholder="Password">
                     <button class="login-btn">Log in</button>
-                    <small class="forget-link">Forget password?</small>
+                    <a href="" class="forget-link">Forget password?</a> 
                     <div class="line"></div>
                     <button class="create-link">Crate New Account</button>
                 </form>
